Complete booking flow with garage services and JWT auth